--- a/web/styles.css
+++ b/web/styles.css
@@ -62,7 +62,7 @@ button:disabled,button:disabled:hover {
 }
 
 .emphasize {
-    background-color: yellow;
+    background-color: yellow !important;
 }
 
 #container {
@@ -100,4 +100,9 @@ button:disabled,button:disabled:hover {
     color: white;
     font-size: 30px;
     position: relative;
+}
+
+#statistics {
+    font-size: 20px;
+    padding: 20px;
 }
